<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling"
   >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="12dp"
     android:orientation="vertical"
     android:paddingTop="14dp"
     >
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/account"
       android:layout_marginBottom="12dp"
       android:alpha="1"
       android:textColor="#4A9DD7"
       android:textSize="14sp"
       android:layout_marginHorizontal="@dimen/text_margin"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20_0353433434"
        android:alpha="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginHorizontal="@dimen/text_margin"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/text_margin"
      android:layout_marginTop="4dp"
      android:layout_marginBottom="8dp"
      android:alpha="0.5"
      android:text="@string/tap_to_change_phone_number"
      android:textColor="@color/black"
      android:textSize="14sp" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:background="@color/black"
      android:layout_marginHorizontal="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:alpha="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:alpha="0.5"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="@dimen/text_margin"/>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:background="@color/black"
      android:layout_marginHorizontal="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:alpha="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_few_words_about_yourself"
        android:alpha="0.5"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginHorizontal="@dimen/text_margin"/>
 </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#EEEEEE"/>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_marginStart="16dp"
     >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/action_settings"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="16dp"
      android:alpha="1"
      android:textColor="#4A9DD7"
      android:textSize="14sp"

      />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        android:orientation="horizontal">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/notifications_24px"

      />
     <TextView
         android:text="@string/notification"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:layout_marginStart="18dp"
         />
     </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:alpha="1"
       android:background="@drawable/lock_24px"
       />
   <TextView
       android:text="@string/privacy_and_security"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/pie_chart_24px"

       />
   <TextView
       android:text="@string/data_and_storage"
       android:textColor="@color/black"
       android:textSize="14sp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/chat_bubble_24px"

       />
   <TextView
       android:text="@string/chat_settings"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/sentiment_satisfied_24px"

       />
   <TextView
       android:text="@string/stickers_and_emoji"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/folder_24px"

       />
   <TextView
       android:text="@string/chat_folders"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>

  <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:alpha="0.1"
     android:layout_marginStart="40dp"
     android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/devices_24px"

       />
   <TextView
       android:text="@string/devices"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/language_24px"

       />
   <TextView
       android:text="@string/language"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>

 </LinearLayout>

 <View
     android:layout_width="match_parent"
     android:layout_height="10dp"
     android:background="#EEEEEE"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_marginStart="16dp"
     >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/help"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="16dp"
      android:alpha="1"
      android:textColor="#4A9DD7"
      android:textSize="14sp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/sms_24px"

       />
   <TextView
       android:text="@string/ask_a_question"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/help_24px"

       />
   <TextView
       android:text="@string/telegram_faq"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:alpha="0.1"
      android:layout_marginStart="40dp"
      android:background="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingVertical="10dp"
      android:orientation="horizontal">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/verified_user_24px"

       />
   <TextView
       android:text="@string/privacy_policy"
       android:textSize="14sp"
       android:textColor="@color/black"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="18dp"
       />
  </LinearLayout>
 </LinearLayout>


 <View
     android:layout_width="match_parent"
     android:layout_height="44dp"
     android:background="#EEEEEE"/>

 </LinearLayout>


</androidx.core.widget.NestedScrollView>